xee-xpath-compiler/tests/snapshots/xpath__cast_date_z_back_to_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"('2019-01-03Z' cast as xs:date) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "2019-01-03Z",
                ),
            ),
        ),
    },
)
