xee-xpath-compiler/tests/snapshots/xpath__cast_duration_back_to_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"('P1Y2M3DT4H5M6S' cast as xs:duration) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "P1Y2M3DT4H5M6S",
                ),
            ),
        ),
    },
)
