xee-xpath-compiler/tests/snapshots/xpath__cast_g_day_back_to_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"('---01' cast as xs:gDay) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "---01",
                ),
            ),
        ),
    },
)
