xee-xpath-compiler/tests/snapshots/xpath__cast_g_month_tz.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'--01Z' cast as xs:gMonth\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                GMonth(
                    GMonth {
                        month: 1,
                        offset: Some(
                            +00:00,
                        ),
                    },
                ),
            ),
        ),
    },
)
