xee-xpath-compiler/tests/snapshots/xpath__cast_integer_as_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1 cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "1",
                ),
            ),
        ),
    },
)
