xee-xpath-compiler/tests/snapshots/xpath__cast_negative_zero.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"xs:unsignedLong('-0')\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    UnsignedLong,
                    0,
                ),
            ),
        ),
    },
)
