xee-xpath-compiler/tests/snapshots/xpath__cast_time_millis_back_to_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"('15:14:30.123' cast as xs:time) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "15:14:30.123",
                ),
            ),
        ),
    },
)
