xee-xpath-compiler/tests/snapshots/xpath__comma_simple_map.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2), (3, 4) ! (. + 1)\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        1,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        2,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        4,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        5,
                    ),
                ),
            ],
        ),
    },
)
