xee-xpath-compiler/tests/snapshots/xpath__compare_general_eq_sequence_true.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2) = (3, 2)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
