xee-xpath-compiler/tests/snapshots/xpath__count.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a/><b><c/></b></doc>\"#, \"fn:count(descendant::*)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    4,
                ),
            ),
        ),
    },
)
